--- a/epicodeCorso/esercizi/week_1/day3/paginaRicetta/index.html
+++ b/epicodeCorso/esercizi/week_1/day3/paginaRicetta/index.html
@@ -24,7 +24,7 @@
                 <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart
                     cranberries and creamy brie. It will become youe new favorite holiday starter!</p>
                 <div class="video">
-                    <video src="assets/media/brotsky-bakery.mp4" width="50%" height="auto" poster="https://www.simplyrecipes.com/thmb/zF72dLHMKcc-jkJE76eOpXvBSD0=/720x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2020__12__Cranberry-Brie-Onion-Focaccia-LEAD-3-de2a320146654a1e975487ca943bfaa3.jpg
+                    <video src="assets/media/brotsky-bakery.mp4" poster="https://www.simplyrecipes.com/thmb/zF72dLHMKcc-jkJE76eOpXvBSD0=/720x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2020__12__Cranberry-Brie-Onion-Focaccia-LEAD-3-de2a320146654a1e975487ca943bfaa3.jpg
                     " controls></video>
                 </div>
             </div>
@@ -69,16 +69,26 @@
                 <h2>Method</h2>
                 <section>
                     <article>
-                        <h3>Make the focaccia dough</h3>
-                        <ol>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachement, mix together
-                            all
-                            the
-                            dough ingredients until the flour is fully absorbed. You don't need to actually knead the
-                            dough,
-                            tough I sometimes knead it a few times in the bowl when mixing by hand to incorporate the
-                            last
-                            of
-                            the flour....
+
+                        <ol>
+                            <li>
+                                <h3>Make the focaccia dough</h3>
+                                <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachement, mix
+                                    together
+                                    all
+                                    the
+                                    dough ingredients until the flour is fully absorbed. You don't need to actually
+                                    knead
+                                    the
+                                    dough,
+                                    tough I sometimes knead it a few times in the bowl when mixing by hand to
+                                    incorporate
+                                    the
+                                    last
+                                    of
+                                    the flour....
+                                </p>
+                            </li>
                         </ol>
                     </article>
                 </section>
