--- a/epicodeCorso/esercizi/week_1/day4/giorno4_Gruppo6.html
+++ b/epicodeCorso/esercizi/week_1/day4/giorno4_Gruppo6.html
@@ -24,13 +24,13 @@
         <nav id="menuNav">
             <ul>
                 <li>
-                    <a href="javascript:void(0)" title="Home">Home</a>
+                    <a href="javascript:void(0)" title="Home">&rArr;Home&lArr;</a>
                 </li>
                 <li>
-                    <a href="javascript:void(0)" title="Articoli">Articoli</a>
+                    <a href="javascript:void(0)" title="Articoli">&rArr;Articoli&lArr;</a>
                 </li>
                 <li>
-                    <a href="javascript:void(0)" title="Jobs">Jobs</a>
+                    <a href="javascript:void(0)" title="Jobs">&rArr;Lavora con noi&lArr;</a>
                 </li>
             </ul>
         </nav>
@@ -66,10 +66,11 @@
 
                 <section>
                     <div id="Formattazione">
-                        <h2>Formattazione del codice</h2>
-                        <p>Il testo dell'articolo dovrà essere
-                            formattato per identificare tutte le parti da <b>selezionare con i CSS.</b>
-                            Perciò i passi saranno:</p>
+                        <p>Formattazione del codice<br>Il testo dell'articolo dovrà essere
+                            formattato per identificare tutte le parti da <span id="textfucsia">selezionare con i
+                                CSS.</span>
+                            Perciò i passi saranno:
+                        </p>
                         <ol>
                             <li>Progettare su carta il markup finale, assegnando ad ogni specifico testo il tag
                                 appropriato
@@ -160,22 +161,29 @@
             <div id="link1">
                 <a href="link1.html" title="Link1" id="link1">Validare il codice HTML</a><br>
                 <p>
-                    Categoria: develop <br><br>
-                    Data: 18-9-2020
+                    <ion-icon name="pricetag-sharp"></ion-icon> Categoria: develop
                 </p>
+                <p id="data">
+                    <ion-icon name="calendar-sharp"></ion-icon>Data: 18-9-2020
+                </p>
+
             </div>
             <div id="link2">
                 <a href="link2.html" title="Link2">Correggere la sintassi</a><br>
                 <p>
-                    Categoria: develop <br><br>
-                    Data: 16-9-2020
+                    <ion-icon name="pricetag-sharp"></ion-icon> Categoria: develop
+                </p>
+                <p id="data">
+                    <ion-icon name="calendar-sharp"></ion-icon>Data: 16-9-2020
                 </p>
             </div>
             <div id="link3">
                 <a href="link3.html" title="Link3">Meno Kb nella pagina</a><br>
                 <p>
-                    Categoria: ottimizzazione <br><br>
-                    Data: 30-9-2020
+                    <ion-icon name="pricetag-sharp"></ion-icon> Categoria: develop
+                </p>
+                <p id="data">
+                    <ion-icon name="calendar-sharp"></ion-icon>Data: 30-9-2020
                 </p>
             </div>
         </aside>
