--- a/epicodeCorso/esercizi/week_2/day3/index.html
+++ b/epicodeCorso/esercizi/week_2/day3/index.html
@@ -36,7 +36,7 @@
         <h1>Esercizio 7</h1>
         <div>
             <p id="esercizio7"></p>
-            <p id="esercizo7.1"></p>
+            <p id="esercizio7.1"></p>
         </div>
         <h1>Esercizio 8</h1>
         <div>
@@ -49,6 +49,8 @@
         <h1>Esercizio 10</h1>
         <div>
             <p id="esercizio10"></p>
+            <p id="esercizio10-2"></p>
+            <p id="esercizio10-3"></p>
         </div>
         <h1>Esercizio 11</h1>
         <div>
