Lista della Spesa (wip)

--- a/Projects/Lista della Spesa/ListaSpesa.html
+++ b/Projects/Lista della Spesa/ListaSpesa.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista della Spesa</title>
-    <link rel="stylesheet" href="../My To-Do List/assets/css/LSstyle.css">
+    <link rel="stylesheet" href="../Lista della Spesa/assets/css/LSstyle.css">
 </head>
 
 <body>
@@ -14,17 +14,18 @@
     <div>
 
         <fieldset>
+            <span id="error">Prima scrivi una articolo</span>
+            <span id="congrats">Nice Work! Keep it going!</span>
             <h1>Lista della Spesa</h1>
             <input type="text" id="myInput" placeholder="Aggiungi articolo alla lista...">
-            <button type="submit" id="addBtn">Aggiungi</button>
+            <button id="addBtn">Aggiungi</button>
         </fieldset>
 
         <ul id="myList">
-
         </ul>
     </div>
 
-    <script src="../My To-Do List/assets/js/LSscript.js"></script>
+    <script src="../Lista della Spesa/assets/js/LSscript.js"></script>
 </body>
 
 </html>
