--- a/epicodeCorso/Units/Unit2/Week2/day1/grid.html
+++ b/epicodeCorso/Units/Unit2/Week2/day1/grid.html
@@ -16,15 +16,15 @@
     <div class="container">
         <div class="row">
             <div
-                class="col col-md-12 my-md-2 bg-primary text-light p-md-3 d-flex justify-content-center align-items-center border border-dark-subtle">
+                class="col col-md-12 my-md-2 bg-primary text-light p-md-3 d-flex justify-content-center align-items-center border border-dark">
                 Colonna 1
             </div>
             <div
-                class="col col-md-12 my-md-2 bg-primary text-light p-md-3 d-flex justify-content-center align-items-center border border-dark-subtle">
+                class="col col-md-12 my-md-2 bg-primary text-light p-md-3 d-flex justify-content-center align-items-center border border-dark">
                 Colonna 2
             </div>
             <div
-                class="col col-md-12 my-md-2 bg-primary text-light p-md-3 d-flex justify-content-center align-items-center border border-dark-subtle">
+                class="col col-md-12 my-md-2 bg-primary text-light p-md-3 d-flex justify-content-center align-items-center border border-dark">
                 Colonna 3
             </div>
         </div>
@@ -33,13 +33,13 @@
     <div class="container pb-3">
         <div class="row">
             <div
-                class="col col-4 col-sm-12 col-md-12 col-lg-4 bg-warning p-3 d-flex justify-content-center align-items-center border border-dark-subtle">
+                class="col col-4 col-sm-12 col-md-12 col-lg-4 bg-warning p-3 d-flex justify-content-center align-items-center border border-dark">
                 Colonna 1</div>
             <div
-                class="col col-4 col-sm-12 col-md-12 col-lg-4 bg-warning p-3 d-flex justify-content-center align-items-center border border-dark-subtle">
+                class="col col-4 col-sm-12 col-md-12 col-lg-4 bg-warning p-3 d-flex justify-content-center align-items-center border border-dark">
                 Colonna 2</div>
             <div
-                class="col col-4 col-sm-12 col-md-12 col-lg-4 bg-warning p-3 d-flex justify-content-center align-items-center border border-dark-subtle">
+                class="col col-4 col-sm-12 col-md-12 col-lg-4 bg-warning p-3 d-flex justify-content-center align-items-center border border-dark">
                 Colonna 3</div>
         </div>
     </div>
