--- a/epicodeCorso/Units/Unit2/Week2/day2/Travel.html
+++ b/epicodeCorso/Units/Unit2/Week2/day2/Travel.html
@@ -27,18 +27,19 @@
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Saldi</a>
+                        <a class="nav-link" href="#saldi">Saldi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link" href="#welcome" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             Welcome Summer
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Last Minute</a>
+                        <a class="nav-link" href="#lastMinute">Last Minute</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Recensioni</a>
+                        <a class="nav-link" href="#recensioni">Recensioni</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -62,7 +63,7 @@
     </div>
 
     <div class="container">
-        <h3>Saldi</h3>
+        <h3 id="saldi">Saldi</h3>
         <div class="row row-cols-2  row-cols-md-3 row-cols-lg-4 justify-content-center gy-4">
             <div class="col">
                 <div class="card border border-2 border-info">
@@ -116,7 +117,7 @@
     </div>
 
     <div class="container my-4">
-        <h3>Welcome Summer</h3>
+        <h3 id="welcome">Welcome Summer</h3>
         <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-6 gy-4">
             <div class="col">
                 <div class="card shadow">
@@ -209,7 +210,7 @@
             </div>
         </div>
 
-        <h3>Last Minute</h3>
+        <h3 id="lastMinute">Last Minute</h3>
         <div class="row row-cols-2  row-cols-lg-3 row-cols-xl-6 my-3 gy-3">
             <div class="col">
                 <img src="https://images.lonelyplanetitalia.it/uploads/57ebc727b71b78.97971879-634.jpg?q=80&p=slider&s=1c25ae12ad291d8ed124319435a9a934"
@@ -237,7 +238,7 @@
             </div>
         </div>
 
-        <h3 class="text-center">Dicono di noi</h3>
+        <h3 class="text-center" id="recensioni">Dicono di noi</h3>
         <div class="row my-3">
             <div class="col-1"><i
                     class="bi bi-person-circle fs-1 me-5 border border-2 border-info rounded-circle p-0"></i>
