--- a/epicodeCorso/Units/Unit2/Week2/day2/Travel.html
+++ b/epicodeCorso/Units/Unit2/Week2/day2/Travel.html
@@ -24,14 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="Travel.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#saldi">Saldi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#welcome" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
+                        <a class="nav-link" href="#welcome">
                             Welcome Summer
                         </a>
                     </li>
@@ -118,7 +117,7 @@
 
     <div class="container my-4">
         <h3 id="welcome">Welcome Summer</h3>
-        <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-6 gy-4">
+        <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xxl-6 gy-4">
             <div class="col">
                 <div class="card shadow">
                     <img src="https://images.lonelyplanetitalia.it/uploads/MSzVWC2KyFyF3OMqZOH20Ka4cb8LnagE.png?q=80&p=slider&s=d38cc3211bdc5d5d79c8fee5500679fb"
@@ -196,11 +195,11 @@
 
         <div class="row my-4"> <!--d-none d-sm-block-->
             <h3>Offerta del giorno</h3>
-            <div class="col-9"> <!-- shadow-lg p-0-->
+            <div class="col-8 col-md-9"> <!-- shadow-lg p-0-->
                 <img src="https://images.lonelyplanetitalia.it/uploads/57ebc727b71b78.97971879-634.jpg?q=80&p=slider&s=1c25ae12ad291d8ed124319435a9a934"
                     class="card-img-top" alt="Previous">
             </div>
-            <div class="col-3">
+            <div class="col-4 col-md-3">
                 <ul class="list-unstyled">
                     <li class="fs-3">Grande Muraglia cinese</li>
                     <li>01.01.2023 - 07.01.2023</li>
