--- a/epicodeCorso/Units/Unit2/Week2/day2/Travel.html
+++ b/epicodeCorso/Units/Unit2/Week2/day2/Travel.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Travel.html"><img class="w-25 offset-lg-8"
+            <a class="navbar-brand" href="Travel.html"><img class="w-25 offset-lg-8 s"
                     src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/0013/5525/brand.gif?itok=uJnkZMZd"
                     alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -196,7 +196,8 @@
         <div class="row my-4"> <!--d-none d-sm-block-->
             <h3>Offerta del giorno</h3>
             <div class="col-8 col-md-9"> <!-- shadow-lg p-0-->
-                <img src="https://images.lonelyplanetitalia.it/uploads/57ebc727b71b78.97971879-634.jpg?q=80&p=slider&s=1c25ae12ad291d8ed124319435a9a934"
+                <img class="img-fluid0"
+                    src="https://images.lonelyplanetitalia.it/uploads/57ebc727b71b78.97971879-634.jpg?q=80&p=slider&s=1c25ae12ad291d8ed124319435a9a934"
                     class="card-img-top" alt="Previous">
             </div>
             <div class="col-4 col-md-3">
