--- a/epicodeCorso/Units/Unit2/Week2/day4/index.html
+++ b/epicodeCorso/Units/Unit2/Week2/day4/index.html
@@ -11,18 +11,39 @@
 </head>
 
 <body>
-    <nav>
-        <div>
-            <a href="#">Navbar</a>
+    <header>
+        <nav>
             <div>
                 <div class="navBtn">
+                    <a href="./index.html"> <img src="./img/logoday4.svg" alt="logo"> </a>
                     <a href="#">Home</a>
                     <a href="#">Features</a>
                     <a href="#">Pricing</a>
                 </div>
             </div>
+        </nav>
+
+        <div class="hero">
+            <div> <img src="https://place.dog/300/200" alt="pic"></div>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quod fuga, tenetur distinctio
+                perspiciatis dolores debitis nobis mollitia consequatur, ratione ea quae libero hic tempore odio
+                praesentium, voluptas voluptatem maxime."</p>
+            <div class="buttons_hero">
+                <button class="btn__Hero1" type="button">Scopri di più</button>
+                <button class="btn__Hero2" type="button">Accedi</button>
+                <button class="btn__Hero3" type="button">Contattaci</button>
+            </div>
         </div>
-    </nav>
+    </header>
+    <main>
+        <div class="grid-container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
+    </main>
+
 </body>
 
 </html>
