--- a/epicodeCorso/Units/Unit2/Week2/day5/Netflix.html
+++ b/epicodeCorso/Units/Unit2/Week2/day5/Netflix.html
@@ -90,69 +90,72 @@
                 </div>
             </div>
 
-            <h5 class=" text-white mx-1 mt-4">Trending Now</h5>
-            <div class="box_img row-cols-2  row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly mx-4 my-3">
-                <div class="col mx-1">
+            <h5 class=" text-white mx-4 mt-4">Trending Now</h5>
+            <div
+                class="box_img row row-cols-1 row-cols-md-3  row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly flex-wrap mx-4 my-3 gy-2">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media0.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media1.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media2.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media3.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media4.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media5.webp" alt="movie poster">
                 </div>
 
             </div>
 
-            <h5 class=" text-white mx-1 mt-4">Watch It Again</h5>
-            <div class=" box_img row-cols-2  row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly mx-4 my-3">
-                <div class="col mx-1">
+            <h5 class=" text-white mx-1 mx-4 mt-4">Watch It Again</h5>
+            <div
+                class=" box_img row row-cols-1 row-cols-md-3   row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly flex-wrap mx-4 my-3 gy-2">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media6.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media7.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media8.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media9.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media10.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media11.jpg" alt="movie poster">
                 </div>
             </div>
 
-            <h5 class=" text-white mx-1 mt-4">New Releases</h5>
-            <div class="box_img row-cols-2  row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly mx-4 my-3">
-                <div class="col mx-1">
+            <h5 class=" text-white mx-1 mx-4 mt-4">New Releases</h5>
+            <div
+                class="box_img row row-cols-1 row-cols-md-3   row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly flex-wrap mx-4 my-3 gy-2">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media12.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media13.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media14.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media15.jpg" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media16.webp" alt="movie poster">
                 </div>
-                <div class="col mx-1">
+                <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media17.jpg" alt="movie poster">
                 </div>
             </div>
