--- a/epicodeCorso/Units/Unit2/Week2/day5/Netflix.html
+++ b/epicodeCorso/Units/Unit2/Week2/day5/Netflix.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./assets/css/Netflix.css">
 </head>
 
@@ -16,7 +17,8 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black sticky-top" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href="Travel.html"><img class="" src="./assets/img/netflix_logo.png"
+                <a class="navbar-brand" href="Travel.html"><img
+                        class="animate__animated animate__zoomIn animate__delay-1s" src="./assets/img/netflix_logo.png"
                         alt="netflix logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -73,7 +75,7 @@
         <div class="container py-3">
             <div class="row">
                 <div class="col-2 text-white">
-                    <h2>TV Shows</h2>
+                    <h2 class="animate__animated animate__fadeInRight animate__delay-2s">TV Shows</h2>
                 </div>
                 <div class="col-2 ">
                     <select class="form-select bg-out btn btn-outline-dark text-white"
@@ -90,7 +92,8 @@
                 </div>
             </div>
 
-            <h5 class=" text-white mx-4 mt-4">Trending Now</h5>
+            <h5 class=" text-white mx-4 mt-4  animate__animated animate__fadeInRight animate__delay-3s">Trending Now
+            </h5>
             <div
                 class="box_img row row-cols-1 row-cols-md-3  row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly flex-wrap mx-4 my-3 gy-2">
                 <div class="col">
@@ -111,10 +114,10 @@
                 <div class="col">
                     <img class="img-fluid" src="./assets/img/media/media5.webp" alt="movie poster">
                 </div>
-
             </div>
 
-            <h5 class=" text-white mx-1 mx-4 mt-4">Watch It Again</h5>
+            <h5 class=" text-white mx-1 mx-4 mt-4 animate__animated animate__fadeInRight animate__delay-3s">Watch It
+                Again</h5>
             <div
                 class=" box_img row row-cols-1 row-cols-md-3   row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly flex-wrap mx-4 my-3 gy-2">
                 <div class="col">
@@ -137,7 +140,8 @@
                 </div>
             </div>
 
-            <h5 class=" text-white mx-1 mx-4 mt-4">New Releases</h5>
+            <h5 class=" text-white mx-1 mx-4 mt-4 animate__animated animate__fadeInRight animate__delay-3s">New
+                Releases</h5>
             <div
                 class="box_img row row-cols-1 row-cols-md-3   row-cols-lg-3 row-cols-xl-6 d-flex justify-content-evenly flex-wrap mx-4 my-3 gy-2">
                 <div class="col">
@@ -159,7 +163,54 @@
                     <img class="img-fluid" src="./assets/img/media/media17.jpg" alt="movie poster">
                 </div>
             </div>
+
+            <h5 class=" text-white mx-1 mx-4 mt-4">Releasing Next Week</h5>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active  mx-4 ">
+                        <img src="./assets/img/media/media18.jpg" class="d-block w-100" alt="poster">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./assets/img/media/media19.webp" class="d-block w-100" alt="poster">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./assets/img/media/media20.jpg" class="d-block w-100" alt="poster">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./assets/img/media/media21.webp" class="d-block w-100" alt="poster">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./assets/img/media/media22.webp" class="d-block w-100" alt="poster">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./assets/img/media/media23.webp" class="d-block w-100" alt="poster">
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="./assets/img/media/media24.jpg" class="d-block w-100" alt="poster">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
+
+
+
+
+
+
+
+
+
+
     </main>
     <footer>
         <div class="container d-flex justify-content-center align-items-center mt-5">
