--- a/epicodeCorso/Units/Unit2/Week3/day2/form.html
+++ b/epicodeCorso/Units/Unit2/Week3/day2/form.html
@@ -52,9 +52,9 @@
     </form>
     <div>
         <div class="timer">
-            <span id="hours">00</span>
-            <span id="minutes">00</span>
-            <span id="seconds">00</span>
+            <span id="hours"></span>
+            <span id="minutes"></span>
+            <span id="seconds"></span>
         </div>
 
         <div class="spinner-grow text-darks" role="status">
