--- a/epicodeCorso/Units/Unit2/Week3/day1/index.html
+++ b/epicodeCorso/Units/Unit2/Week3/day1/index.html
@@ -12,13 +12,13 @@
 
     <form id="myForm">
         <label for="input1">Pet name</label><br><br>
-        <input type="text" id="petName" name="petName"><br><br>
+        <input type="text" id="petName" name="petName" required><br><br>
         <label for="input2">Owner name</label><br><br>
-        <input type="text" id="ownerName" name="ownerName"><br><br>
+        <input type="text" id="ownerName" name="ownerName" required><br><br>
         <label for="input2">Species</label><br><br>
-        <input type="text" id="species" name="species"><br><br>
+        <input type="text" id="species" name="species" required><br><br>
         <label for="input2">Breed</label><br><br>
-        <input type="text" id="breed" name="breed"><br><br>
+        <input type="text" id="breed" name="breed" required><br><br>
         <button type="submit">Submit</button>
     </form>
 
