--- a/epicodeCorso/Units/Unit2/Week3/day3/libreria.html
+++ b/epicodeCorso/Units/Unit2/Week3/day3/libreria.html
@@ -14,7 +14,7 @@
 <body>
     <h1 class="text-center text-white my-2">Choose your book!</h1>
 
-    <h3 id="ulTitle" class="d-none text-white mx-5">Your cart</h3>
+    <h3 id="ulTitle" class="d-none text-white mx-5">Your cart:</h3>
     <ol id="myUl" class="mx-5"></ol>
     <div class="container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
