--- a/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container mb-2">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <h2 class="mt-5 mb-3 text-white">Backoffice</h2>
