--- a/epicodeCorso/Units/Unit2/Week3/day5/details.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/details.html
@@ -32,11 +32,13 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mb-2">
         <h1 class="text-center my-4 text-white">Dettagli Prodotto</h1>
         <div class="row justify-content-center">
             <div class="col col-12 col-md-6">
+                <div id="container_info">
 
+                </div>
                 <button class="btn btn-danger" id="delete">ELIMINA PRODOTTO</button>
             </div>
         </div>
