--- a/epicodeCorso/Units/Unit2/Week3/day5/details.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/details.html
@@ -40,6 +40,7 @@
 
                 </div>
                 <button class="btn btn-danger" id="delete">ELIMINA PRODOTTO</button>
+                <!--il puslante elimina deve andare su modifica!!-->
             </div>
         </div>
     </div>
