--- a/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>CrudAzon</title>
+    <title>Best E-store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">CrudAzon</a>
+            <a class="navbar-brand" href="./index.html"><span><img class="w-25"
+                        src="./assets/img/001-online-shopping.png" alt="logo" srcset=""></span>Best E-store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -31,54 +32,90 @@
             </div>
         </div>
     </nav>
+    <div class="hero container-fluid h-50 bg-dark text-white text-center bg-opacity-75">
+        <h2 class="pt-2">Backoffice</h2>
+        <div><img class="rounded-pill w-25 my-3"
+                src="https://us.123rf.com/450wm/zsolti1234/zsolti12341211/zsolti1234121100010/16221558-rendent-d-un-homme-poussant-une-roue-isol%C3%A9-sur-blanc.jpg?ver=6"
+                alt="work">
+        </div>
+    </div>
 
-    <div class="container mb-2">
+    <div class="container mb-2 mt-3">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h2 class="mt-5 mb-3 text-white">Backoffice</h2>
                 <form>
                     <div class="mb-3">
-                        <label for="name" class="form-label text-white">Product Name</label>
+                        <label for="name" class="form-label ">Product Name</label>
                         <input class="form-control" id="name" aria-describedby="name input"
                             placeholder="Insert the Product name" required />
                     </div>
                     <div class="mb-3">
-                        <label for="description" class="form-label text-white">Product Description</label>
+                        <label for="description" class="form-label ">Product Description</label>
                         <textarea class="form-control" id="description" rows="6" aria-describedby="description input"
                             placeholder="Add Product description" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="brand" class="form-label text-white">Product Brand</label>
+                        <label for="brand" class="form-label ">Product Brand</label>
                         <input type="form-control" class="form-control" id="brand" aria-describedby="brand input"
                             placeholder="Insert the brand" required />
                     </div>
                     <div class="mb-3">
-                        <label for="image" class="form-label text-white">Product Image</label>
+                        <label for="image" class="form-label ">Product Image</label>
                         <input type="form-control" class="form-control" id="image" aria-describedby="image input"
                             placeholder="Insert the Product image" required />
                     </div>
                     <div class="mb-3">
-                        <label for="price" class="form-label text-white">Product Price</label>
+                        <label for="price" class="form-label ">Product Price</label>
                         <input type="number" class="form-control" id="price" aria-describedby="price input"
                             placeholder="Insert the Product price" required />
                     </div>
-                    <button type="submit" class="btn__change btn btn-primary">Aggiungi Prodotto</button>
-                    <button type="button" class="btn btn-danger d-none" onclick="">
+                    <button type="submit" class="btn__save btn btn-primary p-2">Add Product</button>
+                    <button class="btn btn-danger p-1 d-none" id="delete" data-toggle="modal"
+                        data-target="#deleteNewProduct">DELETE PRODUCT
                         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                            class="bi bi-trash3" viewBox="0 0 16 16">
+                            class="bi bi-trash3 mb-2" viewBox="0 0 16 16">
                             <path
                                 d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
                         </svg>
+                    </button>
+                    <button type="submit" class="btn__reset btn btn-warning text-white p-2 d-none">Reset</button>
+
                     </button>
                 </form>
             </div>
         </div>
     </div>
 
+    <div class="modal fade" id="deleteNewProduct" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Understood</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container-fluid text-white text-center bg-dark bg-opacity-75 bottom-0 d-flex flex-column
+        justify-content-around mt-4">
+        <p class="mt-2">All Rights Reserved &copy;Best E-store</p>
+        <p class="">Write us at:</p>
+        <a class="text-warning mb-2" href="mailto:BestEstore@best.com">BestEstore@best.com</a>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <script src="./assets/backoffice.js"></script>
+    <script src="./assets/js/backoffice.js"></script>
 </body>
 
 </html>
