--- a/epicodeCorso/Units/Unit2/Week3/day5/details.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>CrudAzon</title>
+    <title>Best E-store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/style.css">
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">CrudAzon</a>
+            <a class="navbar-brand" href="./index.html"><span><img class="w-25 "
+                        src="./assets/img/001-online-shopping.png" alt="logo" srcset=""></span>Best E-store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -32,24 +33,38 @@
             </div>
         </div>
     </nav>
-    <div class="container mb-2">
-        <h1 class="text-center my-4 text-white">Dettagli Prodotto</h1>
+
+    <div class="hero container-fluid h-50 bg-dark text-white text-center bg-opacity-75">
+        <h2 class="pt-2">Product Details</h2>
+        <div><img class="rounded-pill w-25 my-3"
+                src="https://www.globalsign.com/application/files/1116/0389/9380/iStock-187186651.png" alt="work">
+        </div>
+    </div>
+
+    <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col col-12 col-md-6">
                 <div id="container_info">
 
                 </div>
-                <button class="btn btn-danger" id="delete">ELIMINA PRODOTTO</button>
-                <!--il puslante elimina deve andare su modifica!!-->
+                <!-- <button class="btn btn-danger" id="delete">ELIMINA PRODOTTO</button>
+                il puslante elimina deve andare su modifica!!-->
             </div>
         </div>
     </div>
     </div>
 
+    <footer
+        class="container-fluid text-white text-center bg-dark bg-opacity-75 bottom-0 d-flex flex-column justify-content-around">
+        <p class="mt-2">All Rights Reserved &copy;Best E-store</p>
+        <p class="">Write us at:</p>
+        <a class="text-warning mb-2" href="mailto:BestEstore@best.com">BestEstore@best.com</a>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <script src="./assets/details.js"></script>
+    <script src="./assets/js/details.js"></script>
 </body>
 
 </html>
