--- a/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
@@ -7,7 +7,7 @@
     <title>Best E-store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <div class="hero container-fluid h-50 bg-dark text-white text-center bg-opacity-75">
+    <div class="hero container-fluid bg-dark text-white text-center bg-opacity-75">
         <h2 class="pt-2">Backoffice</h2>
         <div><img class="rounded-pill w-25 my-3"
                 src="https://us.123rf.com/450wm/zsolti1234/zsolti12341211/zsolti1234121100010/16221558-rendent-d-un-homme-poussant-une-roue-isol%C3%A9-sur-blanc.jpg?ver=6"
