--- a/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
+++ b/epicodeCorso/Units/Unit2/Week3/day5/backoffice.html
@@ -42,7 +42,7 @@
 
     <div class="container mb-2 mt-3">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-12 col-md-8">
                 <form>
                     <div class="mb-3">
                         <label for="name" class="form-label ">Product Name</label>
