--- a/epicodeCorso/Units/BuildWeeks/BuildWeek_2/Album_page.html
+++ b/epicodeCorso/Units/BuildWeeks/BuildWeek_2/Album_page.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./Album_page.css">
 </head>
 
+<!--⬇️sticky nav - arrows and user⬇️ -->
+
 <body class="bg-opacity-50">
     <div class="user__Bar d-flex justify-content-between align-items-center py-2 sticky-top">
         <div class="arrow__Btns ms-3">
@@ -26,6 +28,7 @@
         </div>
     </div>
 
+    <!-- ⬇️current album⬇️ -->
     <div class="album__body ms-3 d-flex mt-5 text-white">
         <div><img class="shadow-lg" src="https://place.dog/150/160" alt="foto artista"></div>
         <div class="ms-2 mt-3">
@@ -37,6 +40,8 @@
                 rilascio - nr canzoni, <span class="opacity-50 small"> minuti e secondi totali</span></p>
         </div>
     </div>
+
+    <!-- ⬇️playlist + upper icons⬇️-->
     <div class="container-fluid mt-3">
         <div class="row">
             <div class="col-12 fs-6 d-flex align-items-center mb-3">
